--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,144 +9,140 @@
     android:background="@drawable/gradient_bg"
     tools:context=".Signin">
 
+    <!-- Profile Icon -->
     <ImageView
         android:id="@+id/settingslogo"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/example"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Sign In Title -->
     <TextView
         android:id="@+id/welcome"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Sign In"
         android:textColor="@color/black"
         android:fontFamily="@font/helvetica_bold"
-        android:textSize="45dp"
+        android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintTop_toBottomOf="@id/settingslogo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settingslogo" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"/>
 
+    <!-- Welcome Message -->
     <TextView
         android:id="@+id/message"
-        android:layout_width="370dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Welcome back to Hope Bridge."
         android:fontFamily="@font/helvetica_bold"
         android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/welcome"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="5dp"/>
 
-
+    <!-- Email Input -->
     <EditText
         android:id="@+id/username"
-        android:layout_width="320dp"
-        android:layout_height="60dp"
-        android:background="@drawable/square_bg"
-        android:ems="10"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:background="@drawable/rounded_input_bg"
         android:hint="Email or Username"
-        android:textSize="23sp"
+        android:textSize="16sp"
         android:inputType="text"
-        android:padding="15dp"
+        android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintTop_toBottomOf="@id/message"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_marginTop="20dp"/>
 
+    <!-- Password Input -->
     <EditText
         android:id="@+id/password"
-        android:layout_width="320dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/square_bg"
-        android:drawableRight="@drawable/eyecnot"
-        android:ems="10"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:background="@drawable/rounded_input_bg"
+        android:drawableEnd="@drawable/eyecnot"
         android:hint="Password"
-        android:textSize="23sp"
+        android:textSize="16sp"
         android:inputType="textPassword"
-        android:longClickable="false"
-        android:padding="15dp"
+        android:padding="12dp"
+        android:drawablePadding="10dp"
+        android:gravity="center_vertical"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintTop_toBottomOf="@id/username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_marginTop="12dp"/>
 
+    <!-- Forgot Password -->
     <Button
         android:id="@+id/forgetpass"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/transparent"
-        android:textSize="20sp"
         android:text="Forgot Password?"
+        android:textSize="16sp"
         android:fontFamily="@font/helvetica_bold"
         android:textColor="#D7CBDF"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        android:layout_marginTop="8dp"/>
 
+    <!-- Sign In Button -->
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="#9D86B9"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:background="@drawable/rounded_button_bg"
         android:textColor="@color/black"
         android:text="Sign In"
         android:fontFamily="@font/helvetica_bold"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/forgetpass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgetpass" />
+        android:layout_marginTop="20dp"/>
 
+    <!-- No Account Text -->
     <TextView
         android:id="@+id/noacc"
         android:layout_width="wrap_content"
-        android:layout_height="29dp"
+        android:layout_height="wrap_content"
         android:text="Don't have an Account?"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:fontFamily="@font/helvetica_bold"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="15dp"/>
 
+    <!-- Sign Up Button -->
     <Button
         android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/transparent"
         android:text="Sign Up"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:fontFamily="@font/helvetica_bold"
         android:textColor="#D7CBDF"
-        app:layout_constraintTop_toBottomOf="@+id/noacc"
+        app:layout_constraintTop_toBottomOf="@id/noacc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
-
-
-
-
+        android:layout_marginTop="5dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
