--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,157 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_bg"
+    android:background="@color/white"
     tools:context=".Signup">
 
     <ImageView
         android:id="@+id/examplelogo"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/example"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/welcome"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Sign Up"
         android:textColor="@color/black"
         android:fontFamily="@font/helvetica_bold"
-        android:textSize="45dp"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/examplelogo" />
 
     <TextView
         android:id="@+id/message"
-        android:layout_width="370dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:text="Welcome back to Hope Bridge."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome to Hope Bridge."
         android:fontFamily="@font/helvetica_bold"
         android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcome"
-        />
+        app:layout_constraintTop_toBottomOf="@id/welcome" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="320dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/square_bg"
-        android:ems="10"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_input_bg"
         android:hint="Email"
-        android:textSize="23sp"
-        android:inputType="text"
-        android:padding="10dp"
+        android:textSize="16sp"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintTop_toBottomOf="@id/message"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="320dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/square_bg"
-        android:ems="10"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/rounded_input_bg"
         android:hint="Username"
-        android:textSize="23sp"
-        android:inputType="text"
-        android:padding="10dp"
+        android:textSize="16sp"
+        android:inputType="textPersonName"
+        android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintTop_toBottomOf="@id/email"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="320dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/square_bg"
-        android:drawableRight="@drawable/eyecnot"
-        android:ems="10"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/rounded_input_bg"
+        android:drawableEnd="@drawable/eyecnot"
         android:hint="Password"
-        android:textSize="23sp"
+        android:textSize="16sp"
         android:inputType="textPassword"
-        android:longClickable="false"
         android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintTop_toBottomOf="@id/username"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#9D86B9"
+        android:background="@drawable/rounded_button_bg"
         android:textColor="@color/black"
         android:text="Sign Up"
         android:fontFamily="@font/helvetica_bold"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@id/password" />
 
     <TextView
         android:id="@+id/noacc"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:text="Already Have an Account?"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
+        android:layout_height="wrap_content"
+        android:text="Already have an Account?"
+        android:layout_marginTop="15dp"
+        android:textSize="16sp"
         android:fontFamily="@font/helvetica_bold"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        />
+        app:layout_constraintTop_toBottomOf="@id/loginButton" />
 
     <Button
         android:id="@+id/signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/transparent"
+        android:background="@android:color/transparent"
         android:text="Sign In"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:fontFamily="@font/helvetica_bold"
         android:textColor="#D7CBDF"
-        app:layout_constraintTop_toBottomOf="@+id/noacc"
+        app:layout_constraintTop_toBottomOf="@id/noacc"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-
-
-
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
